skulls hypothesis test finalised

--- a/notebooks/01_etruscan_skulls.ipynb
+++ b/notebooks/01_etruscan_skulls.ipynb
@@ -23,6 +23,7 @@
     "\n",
     "- Data modelled using a normal distribution.\n",
     "- Normality Checked using a histogram and normal probability plot.\n",
+    "- Descriptive stats (mean and 95% **t**-interval) returned for samples\n",
     "- Two sample, two-tailed **t**-test used to test the hypothesis that\n",
     "  the mean skull breadth of Etruscan skulls is equal to that of Italian\n",
     "  skulls.\n",
@@ -30,15 +31,7 @@
     "### Summary results\n",
     "\n",
     "```python\n",
-    "res_descr{\n",
-    "    'etr_size': 84, 'etr_mean': 143.774, 'etr_confint': (142.478, 145.069),\n",
-    "    'ita_size': 70, 'ita_mean': 132.443, 'ita_confint': (131.072, 133.814),\n",
-    "    'diff_mean': 11.331, 'diff_confint': (9.454, 13.208)}\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "res_test{\n",
-    "    'tstat': 11.925, 'pval': 0.000, 'dof': 152.0}\n",
+    "test_results{'tstat': 11.925, 'pval': 0.000, 'dof': 152.0}\n",
     "```\n",
     "\n",
     "### Output\n",
@@ -75,12 +68,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import packages and modules\n",
     "from scipy import stats\n",
     "import statsmodels.stats.weightstats as sm\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "import os\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09403ee2-be85-4180-b23f-827981142978",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set seaborn theme\n",
     "sns.set_theme()"
    ]
   },
@@ -91,24 +95,113 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# change wkdir\n",
-    "os.chdir(\"..\\\\\")"
+    "# change wkdir and import the data\n",
+    "os.chdir(\"..\\\\\")\n",
+    "data = pd.read_csv(\"data\\\\skulls.csv\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "48ef25bf",
+   "id": "ab67e685",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import the data\n",
-    "data = pd.read_csv(\"data\\\\skulls.csv\")"
+    "# declare and intialise columns of data as series\n",
+    "etr = data[\"Etruscans\"]\n",
+    "ita = data[\"Italians\"].dropna()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "86efb128-aea2-43c2-9a5d-3b90dacc54ff",
+   "id": "22c5a64a-35cb-4d7a-9e77-6b89b5011d2c",
+   "metadata": {},
+   "source": [
+    "### Preview the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "cef53b57-3d3d-40ef-88ae-bcd9ba960012",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Etruscans</th>\n",
+       "      <th>Italians</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>141</td>\n",
+       "      <td>133.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>148</td>\n",
+       "      <td>138.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>132</td>\n",
+       "      <td>130.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>138</td>\n",
+       "      <td>138.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>154</td>\n",
+       "      <td>134.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Etruscans  Italians\n",
+       "0        141     133.0\n",
+       "1        148     138.0\n",
+       "2        132     130.0\n",
+       "3        138     138.0\n",
+       "4        154     134.0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4b7331c-829f-4be0-8b37-69a665ad5f88",
    "metadata": {},
    "source": [
     "### Describe the data"
@@ -116,8 +209,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "e86df96c-6459-4a3c-8888-d96ec85c632a",
+   "execution_count": 5,
+   "id": "f9257998-2089-4efa-b880-22fcacd05184",
    "metadata": {},
    "outputs": [
     {
@@ -184,110 +277,13 @@
        "Italians    70.0  132.442857  5.749948  116.0  129.0  132.0  136.75  148.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data.describe().T"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "80790f6e-8bf0-46f1-8ffa-9df57e615801",
-   "metadata": {},
-   "source": [
-    "### Declare local variables"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "1d7ada77",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "etr = data[\"Etruscans\"]\n",
-    "ita = data[\"Italians\"].dropna()\n",
-    "ttest = sm.CompareMeans.from_data(data1=etr, data2=ita)\n",
-    "res_descr = dict()\n",
-    "res_test = dict()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "06c1a9cc",
-   "metadata": {},
-   "source": [
-    "### Gather descriptive statistics"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "38f022bd-9c14-4c39-a4ff-6c952226e5e4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# describe Etruscan sample\n",
-    "res_descr[\"etr_size\"] = etr.size\n",
-    "res_descr[\"etr_mean\"] = etr.mean()\n",
-    "res_descr[\"etr_confint\"] = ttest.d1.tconfint_mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "d2cdb4a2-74da-4540-80f1-7a96293f0a1d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# describe Italian sample\n",
-    "res_descr[\"ita_size\"] = ita.size\n",
-    "res_descr[\"ita_mean\"] = ita.mean()\n",
-    "res_descr[\"ita_confint\"] = ttest.d2.tconfint_mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "97741e93-8549-42ff-b118-8dfbe100242b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# describe differences between the samples\n",
-    "res_descr[\"diff_mean\"] = etr.mean() - ita.mean()\n",
-    "res_descr[\"diff_confint\"] = ttest.tconfint_diff()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "4dcc4c43-559a-41c8-9ece-474f31654cd6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'etr_size': 84,\n",
-       " 'etr_mean': 143.77380952380952,\n",
-       " 'etr_confint': (142.4781289349803, 145.06949011263873),\n",
-       " 'ita_size': 70,\n",
-       " 'ita_mean': 132.44285714285715,\n",
-       " 'ita_confint': (131.07183038027253, 133.81388390544177),\n",
-       " 'diff_mean': 11.330952380952368,\n",
-       " 'diff_confint': (9.453650451007142, 13.208254310897594)}"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# output descriptive stats\n",
-    "res_descr"
    ]
   },
   {
@@ -300,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "104d8c6a-429c-4c21-a7f0-e0f2e976285a",
    "metadata": {},
    "outputs": [
@@ -330,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "7165bca0-ab12-4a39-b3dd-34898651a23a",
    "metadata": {},
    "outputs": [
@@ -346,7 +342,7 @@
     }
    ],
    "source": [
-    "# probability plot of samples\n",
+    "# probability plot for each sample\n",
     "f, (ax1, ax2) = plt.subplots(ncols=2, sharey=True)\n",
     "stats.probplot(x=etr, plot=ax1)\n",
     "stats.probplot(x=ita, plot=ax2)\n",
@@ -356,6 +352,91 @@
     "plt.savefig(\"skulls_fig2\")\n",
     "os.chdir(\"..\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1da060c7-e803-4289-8da2-ce251dafd908",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.078190046662236"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check sample variances < 3 so we can assume equal population variance\n",
+    "max(etr.var() / ita.var(), ita.var() / etr.var())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "8a2735d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# declare ComparaMeans object for hypothesis testing\n",
+    "ttest = sm.CompareMeans.from_data(data1=etr, data2=ita)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e280139",
+   "metadata": {},
+   "source": [
+    "### Get confidence intervals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "c3ac99f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(142.4781289349803, 145.06949011263873)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Etruscan\n",
+    "ttest.d1.tconfint_mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "4255abc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(131.07183038027253, 133.81388390544177)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Italian\n",
+    "ttest.d2.tconfint_mean()"
    ]
   },
   {
@@ -369,13 +450,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "1da060c7-e803-4289-8da2-ce251dafd908",
+   "id": "7607ccb0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.078190046662236"
+       "11.330952380952368"
       ]
      },
      "execution_count": 12,
@@ -384,41 +465,63 @@
     }
    ],
    "source": [
-    "# check sample variances < 3\n",
-    "max(etr.var() / ita.var(), ita.var() / etr.var())"
+    "# get mean difference\n",
+    "etr.mean() - ita.mean()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "827448ea-82c4-45bc-a1e8-de8257d61c99",
+   "id": "37f84b2a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(9.453650451007142, 13.208254310897594)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# run the test\n",
-    "res_test[\"tstat\"], res_test[\"pval\"], res_test[\"dof\"] = ttest.ttest_ind()"
+    "# get confint of mean difference\n",
+    "ttest.tconfint_diff()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "827448ea-82c4-45bc-a1e8-de8257d61c99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# run the test\n",
+    "tstat, pval, dof = ttest.ttest_ind()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "588a0a13-255b-4477-a558-aced866ce3bd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'tstat': 11.924823310633796, 'pval': 1.4734025976096172e-23, 'dof': 152.0}"
+       "(11.924823310633796, 1.4734025976096172e-23, 152.0)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# output results\n",
-    "res_test"
+    "# print test values\n",
+    "tstat, pval, dof"
    ]
   }
  ],
