Etruscan script and notebook finalised

--- a/notebooks/01_etruscan_skulls.ipynb
+++ b/notebooks/01_etruscan_skulls.ipynb
@@ -11,22 +11,22 @@
     "\n",
     "### Data\n",
     "\n",
-    "source: `data/skulls.csv`\n",
+    "Etruscan, `float` :\n",
+    "breadth of etruscan skulls (mm)\n",
     "\n",
-    "fields:\n",
-    "\n",
-    "- Etruscan, `float` : \"breadth of etruscan skulls (mm)\"\n",
-    "- Italian, `float` : \"breadth of italian skulls (mm)\"\n",
+    "Italian, `float` :\n",
+    "breadth of italian skulls (mm)\n",
     "\n",
     "\n",
     "### Method\n",
     "\n",
-    "- Data modelled using a normal distribution.\n",
-    "- Normality Checked using a histogram and normal probability plot.\n",
+    "- Data modelled using a normal distribution\n",
+    "- Normality Checked using a histogram and normal probability plot\n",
+    "- Assumption of common population variance checked\n",
     "- Descriptive stats (mean and 95% **t**-interval) returned for samples\n",
     "- Two sample, two-tailed **t**-test used to test the hypothesis that\n",
     "  the mean skull breadth of Etruscan skulls is equal to that of Italian\n",
-    "  skulls.\n",
+    "  skulls\n",
     "\n",
     "### Summary results\n",
     "\n",
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "09403ee2-be85-4180-b23f-827981142978",
    "metadata": {},
    "outputs": [],
@@ -90,39 +90,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "33c829aa",
    "metadata": {},
    "outputs": [],
    "source": [
     "# change wkdir and import the data\n",
     "os.chdir(\"..\\\\\")\n",
-    "data = pd.read_csv(\"data\\\\skulls.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "ab67e685",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# declare and intialise columns of data as series\n",
+    "data = pd.read_csv(\"data\\\\skulls.csv\")\n",
     "etr = data[\"Etruscans\"]\n",
     "ita = data[\"Italians\"].dropna()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "22c5a64a-35cb-4d7a-9e77-6b89b5011d2c",
+   "id": "896a7703",
    "metadata": {},
    "source": [
-    "### Preview the data"
+    "### Preview and describe the data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "cef53b57-3d3d-40ef-88ae-bcd9ba960012",
    "metadata": {},
    "outputs": [
@@ -190,7 +180,7 @@
        "4        154     134.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,16 +190,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "d4b7331c-829f-4be0-8b37-69a665ad5f88",
-   "metadata": {},
-   "source": [
-    "### Describe the data"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "f9257998-2089-4efa-b880-22fcacd05184",
    "metadata": {},
    "outputs": [
@@ -277,7 +259,7 @@
        "Italians    70.0  132.442857  5.749948  116.0  129.0  132.0  136.75  148.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "104d8c6a-429c-4c21-a7f0-e0f2e976285a",
    "metadata": {},
    "outputs": [
@@ -326,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "7165bca0-ab12-4a39-b3dd-34898651a23a",
    "metadata": {},
    "outputs": [
@@ -355,8 +337,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5b35a529",
+   "metadata": {},
+   "source": [
+    "Histogram shows the data are unimodal and approximately symmetric.\n",
+    "Probability plot confirms the data are normally distributed.\n",
+    "Neither show that modelling the data as normal is inappropriate."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75f63a9a",
+   "metadata": {},
+   "source": [
+    "### Check for common population variance"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "1da060c7-e803-4289-8da2-ce251dafd908",
    "metadata": {},
    "outputs": [
@@ -366,77 +366,22 @@
        "1.078190046662236"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# check sample variances < 3 so we can assume equal population variance\n",
     "max(etr.var() / ita.var(), ita.var() / etr.var())"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "8a2735d2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# declare ComparaMeans object for hypothesis testing\n",
-    "ttest = sm.CompareMeans.from_data(data1=etr, data2=ita)"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "9e280139",
+   "id": "d87f831a",
    "metadata": {},
    "source": [
-    "### Get confidence intervals"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "c3ac99f4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(142.4781289349803, 145.06949011263873)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Etruscan\n",
-    "ttest.d1.tconfint_mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "4255abc5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(131.07183038027253, 133.81388390544177)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Italian\n",
-    "ttest.d2.tconfint_mean()"
+    "Ratio of sample variances is less than 3, so we can assume common\n",
+    "population variance."
    ]
   },
   {
@@ -449,7 +394,77 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "8a2735d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ttest = sm.CompareMeans.from_data(data1=etr, data2=ita)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e280139",
+   "metadata": {},
+   "source": [
+    "#### Get confidence intervals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c3ac99f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(142.4781289349803, 145.06949011263873)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Etruscan\n",
+    "ttest.d1.tconfint_mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
+   "id": "4255abc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(131.07183038027253, 133.81388390544177)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Italian\n",
+    "ttest.d2.tconfint_mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ee4b88e-0a61-4b1f-b7bf-70a253c34793",
+   "metadata": {},
+   "source": [
+    "#### Describe the difference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "7607ccb0",
    "metadata": {},
    "outputs": [
@@ -459,7 +474,7 @@
        "11.330952380952368"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "37f84b2a",
    "metadata": {},
    "outputs": [
@@ -481,7 +496,7 @@
        "(9.453650451007142, 13.208254310897594)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,19 +507,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "827448ea-82c4-45bc-a1e8-de8257d61c99",
+   "cell_type": "markdown",
+   "id": "a68feb4e-8860-4f00-a74b-d9287727e256",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# run the test\n",
-    "tstat, pval, dof = ttest.ttest_ind()"
+    "#### Run the test"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "827448ea-82c4-45bc-a1e8-de8257d61c99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tstat, pval, dof = ttest.ttest_ind()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "588a0a13-255b-4477-a558-aced866ce3bd",
    "metadata": {},
    "outputs": [
@@ -514,13 +536,12 @@
        "(11.924823310633796, 1.4734025976096172e-23, 152.0)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# print test values\n",
     "tstat, pval, dof"
    ]
   }
