maybe the orevious wasn't the final version...

--- a/notebooks/01_etruscan_skulls.ipynb
+++ b/notebooks/01_etruscan_skulls.ipynb
@@ -23,10 +23,10 @@
     "- Data modelled using a normal distribution\n",
     "- Normality Checked using a histogram and normal probability plot\n",
     "- Assumption of common population variance checked\n",
-    "- Descriptive stats (mean and 95% **t**-interval) returned for samples\n",
+    "- Mean and 95% **t**-interval returned for samples\n",
     "- Two sample, two-tailed **t**-test used to test the hypothesis that\n",
-    "  the mean skull breadth of Etruscan skulls is equal to that of Italian\n",
-    "  skulls\n",
+    "  the mean skull breadth of Etruscan skulls is equal to that of\n",
+    "  Italian skulls\n",
     "\n",
     "### Summary results\n",
     "\n",
@@ -338,16 +338,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b35a529",
-   "metadata": {},
-   "source": [
-    "Histogram shows the data are unimodal and approximately symmetric.\n",
-    "Probability plot confirms the data are normally distributed.\n",
-    "Neither show that modelling the data as normal is inappropriate."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "75f63a9a",
    "metadata": {},
    "source": [
@@ -373,15 +363,6 @@
    ],
    "source": [
     "max(etr.var() / ita.var(), ita.var() / etr.var())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d87f831a",
-   "metadata": {},
-   "source": [
-    "Ratio of sample variances is less than 3, so we can assume common\n",
-    "population variance."
    ]
   },
   {
