prac test complete

--- a/notebooks/02_practical_driving_test.ipynb
+++ b/notebooks/02_practical_driving_test.ipynb
@@ -5,38 +5,52 @@
    "id": "801dbc69-4b88-470a-85ed-d1f9ef98140b",
    "metadata": {},
    "source": [
-    "# Hypothesis test: Pass rate of the practical driving test in the UK\n",
+    "# Pass rate of the practical driving test in the UK\n",
     "\n",
     "## Summary\n",
     "\n",
-    "**description**\n",
-    ": \"a one sample **z**-test of equal means\"\n",
+    "### Data\n",
     "\n",
-    "**data**\n",
-    ": `data/practical_test.csv`\n",
+    "Centre `str` :\n",
+    "location of test centre\n",
     "\n",
-    "Centre\tMale\tFemale\tTotal\n",
-    "- **Centre** `str` : \"location of test centre\"\n",
-    "- **Male** `float` : \"mean pass rate of males at the centre from\n",
-    "                      April 2014 to March 2015\"\n",
-    "- **Female** `float` : \"mean pass rate of females at the centre from\n",
-    "                        April 2014 to March 2015\"\n",
-    "- **Total** `float` : \"mean pass rate of males and females from April\n",
-    "                       2014 to March 2015\"\n",
+    "Male `float` :\n",
+    "mean percentage pass rate of males at the centre from April 2014 to\n",
+    "March 2015\n",
     "\n",
-    "**summary results**\n",
-    ":\n",
+    "Female `float` :\n",
+    "mean percentage pass rate of females at the centre from April 2014 to\n",
+    "March 2015\n",
+    "\n",
+    "Total `float` :\n",
+    "mean percentage pass rate of both males and females from April 2014\n",
+    "to March 2015\n",
+    "\n",
+    "### Method\n",
+    "\n",
+    "- Data modelled using an apporximate normal distribution\n",
+    "- Frequency histogram and normal probability plot to check symmetry of\n",
+    "  of data\n",
+    "- Mean and 95% **z**-interval returned for samples\n",
+    "- One sample, two-tailed **z**-test used to test the hypothesis that\n",
+    "  the mean total pass rate of the UK driving practical test was equal\n",
+    "  to 47.1%.\n",
+    "\n",
+    "### Summary results\n",
     "\n",
     "```python\n",
-    "res(\n",
-    "    \"sample_mean\": 49.63038,\n",
-    "    \"95%_confint\": (48.84034, 50.42042),\n",
-    "    \"zstat\": 6.277,\n",
-    "    \"pval\": 0.00000)\n",
+    "test_results{'zstat': 6.277, 'pval': 3.441}\n",
     "```\n",
     "\n",
-    "**output**\n",
-    ": <!--Add path to FinishingM248-->\n"
+    "### Output\n",
+    "\n",
+    "<!--Add path to FinishingM248-->\n",
+    "\n",
+    "### Reference\n",
+    "\n",
+    "m248.b.act23\n",
+    "\n",
+    "-----"
    ]
   },
   {
@@ -52,39 +66,48 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b8694f7f",
+   "id": "32fc289b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# change working dir\n",
-    "import os\n",
-    "os.chdir(\"..\\\\\")"
+    "# import packages and modules\n",
+    "from scipy import stats\n",
+    "import statsmodels.stats.weightstats as sm\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "32fc289b",
+   "id": "d224d0a2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import packages\n",
-    "from statsmodels.stats.weightstats import DescrStatsW\n",
-    "from scipy.stats import probplot\n",
-    "import pandas as pd\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt"
+    "# set seaborn theme\n",
+    "sns.set_theme()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d224d0a2",
+   "id": "b8694f7f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# set default seaborn theme\n",
-    "sns.set_theme()"
+    "# change wkdir and import the data\n",
+    "os.chdir(\"..\\\\\")\n",
+    "data = pd.read_csv(\"data\\\\practical_test.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51093aa8",
+   "metadata": {},
+   "source": [
+    "### Preview and describe the data"
    ]
   },
   {
@@ -92,65 +115,78 @@
    "execution_count": 4,
    "id": "cd769a88",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>45.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>47.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>56.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>57.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>42.7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Total\n",
+       "0   45.6\n",
+       "1   47.2\n",
+       "2   56.8\n",
+       "3   57.7\n",
+       "4   42.7"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# import the data\n",
-    "df_prac_test = pd.read_csv(\"data\\\\practical_test.csv\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fc510d90",
-   "metadata": {},
-   "source": [
-    "### Declare local variables"
+    "data[[\"Total\"]].head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9a7b2fc4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# get columns as Series\n",
-    "r_total = df_prac_test[\"Total\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "c24394db",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# declare and initialise DescrStatsW object for the hypothesis test\n",
-    "ztest = DescrStatsW(data=r_total)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "58b3fcfb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# results dictionary\n",
-    "res = dict()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "30ca3e03",
-   "metadata": {},
-   "source": [
-    "### Describe the sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "786e2dde",
+   "id": "68def243",
    "metadata": {},
    "outputs": [
     {
@@ -205,50 +241,27 @@
        "Total  316.0  49.63038  7.165444  30.3  44.975  49.65  54.5  71.3"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# send summary table to df for pretty output\n",
-    "pd.DataFrame(r_total).describe().T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "cdec1abe",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(48.840342381395864, 50.42041711227501)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 95% z-interval\n",
-    "ztest.zconfint_mean()"
+    "data[[\"Total\"]].describe().T"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "749e098b",
+   "id": "30ca3e03",
    "metadata": {},
    "source": [
-    "### Visualise the sample"
+    "### Visualise the data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "e0edc24c",
+   "execution_count": 6,
+   "id": "786e2dde",
    "metadata": {},
    "outputs": [
     {
@@ -263,20 +276,19 @@
     }
    ],
    "source": [
-    "# plot the sample as a histogram\n",
-    "ax = sns.histplot(x=r_total, bins=12)\n",
-    "# save figs, drop to figures dir\n",
+    "# frequency histogram\n",
+    "f, ax = plt.subplots()\n",
+    "ax = sns.histplot(data=data, x=\"Total\", bins=12)\n",
     "os.chdir(\"figures\")\n",
     "plt.savefig(\"practest_fig1\")\n",
     "os.chdir(\"..\")\n",
-    "# output the plot\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "8008a3f2",
+   "execution_count": 7,
+   "id": "4ea35b42",
    "metadata": {},
    "outputs": [
     {
@@ -291,36 +303,100 @@
     }
    ],
    "source": [
-    "# normal probability plot of the same\n",
+    "# probability plot of sample\n",
     "f, ax = plt.subplots()\n",
-    "# construct the probability plot\n",
-    "probplot(x=r_total, plot=ax)\n",
-    "# save figs, drop to figures dir\n",
+    "stats.probplot(x=data[\"Total\"], plot=ax)\n",
     "os.chdir(\"figures\")\n",
     "plt.savefig(\"practest_fig2\")\n",
     "os.chdir(\"..\")\n",
-    "# output the plot\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c2abf316",
+   "id": "749e098b",
    "metadata": {},
    "source": [
-    "### Run the $z$-test"
+    "### Run the hypothesis test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "d583422c",
+   "execution_count": 8,
+   "id": "9a7b2fc4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d1 = sm.DescrStatsW(data=data[\"Total\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a1968b3-ad66-4453-b408-4709dafef7fd",
+   "metadata": {},
+   "source": [
+    "#### Get confidence interval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "14537380-42ff-4f38-971d-f644c6f6f742",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'zstat': 6.2774919110915715, 'pval': 3.4407815848731304e-10}"
+       "(48.840342381395864, 50.42041711227501)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d1.zconfint_mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fac0c72f-7da9-4cf7-992f-a4007d0ebece",
+   "metadata": {},
+   "source": [
+    "#### Run the test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e0edc24c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mu0 = 47.1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "8008a3f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zstat, pval = d1.ztest_mean(value=mu0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "efa81afa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6.2774919110915715, 3.4407815848731304e-10)"
       ]
      },
      "execution_count": 12,
@@ -329,10 +405,7 @@
     }
    ],
    "source": [
-    "# populate res\n",
-    "res[\"zstat\"], res[\"pval\"] = ztest.ztest_mean(value=47.1)\n",
-    "# print results\n",
-    "res"
+    "zstat, pval"
    ]
   }
  ],
