--- a/py_notebooks/04_under30s_at_home.ipynb
+++ b/py_notebooks/04_under30s_at_home.ipynb
@@ -1,16 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "ca971313",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# noqa:  E501"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "22c720e6",
    "metadata": {},
@@ -176,7 +166,7 @@
  ],
  "metadata": {
   "jupytext": {
-   "formats": "py_notebooks///ipynb,scripts///py:percent"
+   "formats": "py_notebooks///ipynb,py_scripts///py:percent"
   },
   "kernelspec": {
    "display_name": "Python 3.8",
