--- a/py_notebooks/07_laurel_hardy.ipynb
+++ b/py_notebooks/07_laurel_hardy.ipynb
@@ -278,7 +278,7 @@
  ],
  "metadata": {
   "jupytext": {
-   "formats": "py_notebooks///ipynb,scripts///py:percent"
+   "formats": "py_notebooks///ipynb,py_scripts///py:percent"
   },
   "kernelspec": {
    "display_name": "Python 3.8",
