--- a/py_notebooks/02_practical_driving_test.ipynb
+++ b/py_notebooks/02_practical_driving_test.ipynb
@@ -392,7 +392,7 @@
  ],
  "metadata": {
   "jupytext": {
-   "formats": "py_notebooks///ipynb,scripts///py:percent"
+   "formats": "py_notebooks///ipynb,py_scripts///py:percent"
   },
   "kernelspec": {
    "display_name": "Python 3.8",
